<resources>
    <string name="app_name">Dr. Jean-Michel Cohen</string>
    <string name="app_version">Version 1.0</string>
    <string name="USER_AGENT_APP_NAME">Perdez vos kilos avec JM Cohen</string>
    <string name="header_right_button">Je m\'inscris</string>
    <string name="menu_home">ACCUEIL</string>
    <string name="menu_home_free">Accueil</string>
    <string name="menu_decouvrir">Découvrir</string>
    <string name="menu_bilan">Bilan minceur</string>
    <string name="menu_temoignages">Témoignages</string>
    <string name="menu_recettes">Recettes</string>
    <string name="menu_recette">Recette</string>
    <string name="menu_mon_compte">Mon compte</string>
    <string name="button_register">je m\'inscris</string>
    <string name="welcome_message">Bonjour, bienvenue sur le programme pour maigrir et être bien dans sa peau</string>
    <string name="terms_of_service">Conditions Générales d\'Utilisation</string>
    <string name="landing_1">Decouvrez le programme</string>
    <string name="landing_2">Faites votre bilan minceur personnalise en video</string>
    <string name="landing_3">Temoignages</string>
    <string name="landing_4">Recettes</string>
    <string name="recipe_entree">Entrée</string>
    <string name="recipe_salad">Salade</string>
    <string name="recipe_plat">Plat</string>
    <string name="recipe_dessert">Dessert</string>
    <string name="recipe_soup">Soupe</string>
    <string name="recipe_appetizer">Amuse-gueule</string>
    <string name="recipe_drink">Boisson</string>
    <string name="recipe_sauce">Sauce</string>
    <string name="recipe_encas">Snack</string>
    <string name="recipe_simplissime">Simplissime</string>
    <string name="recipe_thermomix">Thermomix</string>
    <string name="recipe_preparation">Préparation</string>
    <string name="moncompte_title">Vous n\'avez pas d\'abonnement en cours</string>
    <string name="moncompte_subtitle">Abonnez-vous dès maintenant pour 4,99 €/semaine (sans engagement)</string>
    <string name="moncompte_BulletTittle">En vous abonnant à ce service, vous aurez immédiatement accès :</string>
    <string name="moncompte_Bullet1">✔ coaching vidéo quotidien de Jean-Michel Cohen</string>
    <string name="moncompte_Bullet2">✔ plans de repas personnalisés selon votre profil</string>
    <string name="moncompte_Bullet3">✔ des centaines de recettes diététiques savoureuses</string>
    <string name="moncompte_Bullet4">✔ des conseils minceur en vidéo pour toutes les situations</string>
    <string name="moncompte_Bullet5">✔ votre courbe de poids pour suivre vos progrès</string>
    <string name="moncompte_Bullet6">✔ un support-client efficace pour vous aider à réussir</string>
    <string name="welcome_account_1">Bonjour %@, c\'est l</string>
    <string name="welcome_account_2">e %f de la se</string>
    <string name="welcome_account_3">maine %d de votre programme</string>
    <string name="menu_account_repas">Plan De Repas</string>
    <string name="menu_account_recettes">Recettes</string>
    <string name="menu_account_dieticienne">Diététicienne</string>
    <string name="menu_account_nutrition">NUTRITION</string>
    <string name="nav_account_nutrition">Nutrition</string>
    <string name="menu_account_coaching">COACHING</string>
    <string name="nav_account_coaching">Coaching</string>
    <string name="menu_account_webinars">CONSULTATIONS</string>
    <string name="nav_account_webinars">Consultations en direct</string>
    <string name="menu_account_videos">500+ VIDÉOS</string>
    <string name="nav_account_videos">500+ vidéos</string>
    <string name="left_nav_account_videos">VIDÉOS</string>
    <string name="left_nav_account_boutique">BOUTIQUE</string>
    <string name="menu_account_exercices">Exercices</string>
    <string name="menu_account_boutique">Boutique</string>
    <string name="menu_account_espacevip">Espace VIP</string>
    <string name="menu_account_notifications">Notifications</string>
    <string name="menu_account_invitations">Invitations</string>
    <string name="menu_account_message">Messages</string>
    <string name="menu_account_paramducompte">Paramètres du compte</string>
    <string name="menu_account_poids">Courbes et Progrés</string>
    <string name="menu_account_compte">Mon Compte</string>
    <string name="menu_account_messages">Messagerie Diététique</string>
    <string name="menu_account_carnet">Carnet Minceur</string>
    <string name="menu_account_session">Session du jour</string>
    <string name="menu_account_communaute">COMMUNAUTE</string>
    <string name="nav_account_communaute">Communaute</string>
    <string name="menu_account_fiches">FICHES PRATIQUES</string>
    <string name="nav_account_fiches">Fiches Pratiques</string>
    <string name="menu_account_ambassadrice">AMBASSADRICE</string>
    <string name="nav_account_ambassadrice">Ambassadrice</string>
    <string name="nav_account_weight">Poids</string>
    <string name="nav_account_steps">Pas</string>
    <string name="nav_account_biceps">Biceps</string>
    <string name="nav_account_poitrine">Poitrine</string>
    <string name="nav_account_taille">Tour de taille</string>
    <string name="nav_account_hanches">Hanches</string>
    <string name="nav_account_cuisse">Cuisse</string>
    <string name="NOTIFICATIONS_TITLE">Réponses du Coach</string>
    <string name="NOTIFICATIONS_TIME_AT"> à </string>
    <string name="lost_weight_text">Vous avez perdu </string>
    <string name="coaching_header">Semaine %d</string>
    <string name="coaching_archive_week">Semaine %d</string>
    <string name="coaching_header_right">Archive</string>
    <string name="coaching_broadcast_string">Archive_week_selected</string>
    <string name="conseils_broadcast_string">Archive_category_selected</string>
    <string name="conseils_header_right">Voir tout</string>
    <string name="button_account_alertes">ALERTES SMARTPHONE</string>
    <string name="nav_account_alertes">Alertes</string>
    <string name="mon_compte_profil">PROFIL</string>
    <string name="mon_compte_objectif">OBJECTIF</string>
    <string name="mon_compte_programme">PROGRAMME</string>
    <string name="mon_compte_alertes">ALERTES</string>
    <string name="mon_compte_prenom">Prenom</string>
    <string name="mon_compte_sexe">Sexe</string>
    <string name="mon_compte_sexe_fem">Féminin</string>
    <string name="mon_compte_sexe_masc">Masculin</string>
    <string name="mon_compte_poids_depart">Poids départ (kg)</string>
    <string name="mon_compte_poids_vise">Poids de visé (kg)</string>
    <string name="mon_compte_taille">Taille (cm)</string>
    <string name="mon_compte_plans_repas">Plans de repas</string>
    <string name="mon_compte_plans_brunch">Brunch</string>
    <string name="mon_compte_plans_classique">Classique</string>
    <string name="mon_compte_plans_pour">Menu Rapide et Economique</string>
    <string name="mon_compte_plans_dejeuner">Sans déjeuner - déjeuner léger</string>
    <string name="mon_compte_plans_diner">Sans diner ou diner léger</string>
    <string name="mon_compte_plans_gluten">Sans gluten</string>
    <string name="mon_compte_plans_vache">Sans lait de vache</string>
    <string name="mon_compte_plans_laitages_avec">Sans laitages, avec fromage</string>
    <string name="mon_compte_plans_laitages_sans">Sans laitages, sans fromage</string>
    <string name="mon_compte_plans_viande_porc">Sans viande de porc</string>
    <string name="mon_compte_plans_petit_dejeuner">Sans petit-déjeuner</string>
    <string name="mon_compte_plans_special">Spécial colopathie</string>
    <string name="mon_compte_plans_vegetarien">Végétarien</string>
    <string name="mon_compte_plans_jeune_cohen">Jeûne Cohen 16h</string>
    <string name="mon_compte_plans_low_budget">Menu Rapide et Economique</string>
    <string name="mon_compte_plans_plat_prepares">Maigrir Sans Cuisiner</string>
    <string name="mon_compte_niveau_calorique">Niveau calorique</string>
    <string name="mon_compte_niveau_calorique_900">900 kcal</string>
    <string name="mon_compte_niveau_calorique_1200">1200 kcal</string>
    <string name="mon_compte_niveau_calorique_1400">1400 kcal</string>
    <string name="mon_compte_niveau_calorique_1600">1600 kcal</string>
    <string name="FOODGROUP_PROTEIN">Protéines</string>
    <string name="FOODGROUP_DAIRY">Produits laitiers</string>
    <string name="FOODGROUP_STARCHES">Féculents</string>
    <string name="FOODGROUP_FRUITSVEGGIES">Fruits et légumes</string>
    <string name="FOODGROUP_FAT">Matières grasses</string>
    <string name="TIPS_PROTEIN">Il est conseillé de consommer de la viande, du poisson, des oeufs ou autre équivalence protidique végétale (soja, association céréales + légumineuse) au moins une fois par jour et de choisir des protéines de qualité pour le maintien de notre masse musculaire.</string>
    <string name="TIPS_DAIRY">Il est conseillé de consommer un produit laitier à chaque repas pour leur apport en protéines et le calcium indispensables à la croissance et à la solidité des os.</string>
    <string name="TIPS_STARCHES">Les féculents (céréales, pommes de terre, légumes secs, pain, etc.) constituent la base énergétique de notre alimentation. Il est conseillé d\'en consommer à l\'un des deux repas principaux de la journée et de choisir les moins transformés et plus riches en fibres.</string>
    <string name="TIPS_FRUITSVEGGIES">Les légumes sans MG sont à consommer à volonté pour profiter de leurs apports en vitamines, minéraux et fibres. Consommez au moins 2 portions de légumes par jour dont une crudité. Pour les fruits, croquez 2 à 3 portions chaque jour pour faire le plein de vitalité !</string>
    <string name="TIPS_FAT">Indispensables pour le bon fonctionnement de votre organisme, les matières grasses apportent les acides gras essentiels et les vitamines liposolubles A, D, E et K. Il est conseillé de consommer les graisses avec modération et de privilégier les lipides de bonne qualité comme l\'huile d\'olive ou de colza.</string>
    <string name="messages_low_rating_intro"> <![CDATA[<b>Merci de cocher ce qui ne vous a pas satisfait</b> (plusieurs réponses possibles) :]]></string>
    <string name="message_rating_conseils">Conseils nutritionnels</string>
    <string name="message_rating_temps">Temps de réponse</string>
    <string name="message_rating_qualite">Qualité du coaching</string>
    <string name="message_rating_autres">Autres</string>
    <string name="BUTTON_SUBMIT">je valide</string>
    <string name="TEXT_OTHERS">Autre - précisez</string>
    <string name="evaluation_title">Évaluation</string>
    <string name="WELCOME_BRAVO"> Bravo, vous allez recevoir mon
programme de coaching par
Email à partir de lundi gratuitement

pendant 1 semaine. </string>
    <string name="WELCOME_WHAT_HAPPENS_NEXT">Et maintenant ?</string>
    <string name="WELCOME_POST_PREMIUM_DESCRIPTION">Allez sur votre tableau de bord et

consultez les plans de repas de votre

semaine gratuite. Nous avons mis à

disposition la liste des courses à faire.

Votre programme commence lundi

Donc vous avez un peu de temps

pour vous preparez. \n\n Lisez bien l’email de bienvenue que

Nous venons de vous envoyer car il

explique bien comment fonctionne

le programme mais voici un petit résumé.\n\n Dès lundi regardez attentivement la video

De la  session du jour afin de comprendre

les secrets de la nutrition.\n\n Dans  la rubrique “Diététicienne”

via le “Carnet Minceur”, enregistrez les

repas que vous prenez en ajoutant une

photo ou simplement une description. \n\n Dans cette même rubrique “Diététicienne”,

posez vos questions à notre conseiller

Minceur qui est la pour vous aidez cette

1ère semaine mais si vous décidez de

payer vous aurez accès aux diététicienne

du Dr J.M Cohen.\n\nVoila vous avez tout pour réussir cette

1ère semaine et commencer à perdre

quelques kilos grace à nous
</string>
    <string name="WELCOME_LETS_MOVE_ON">Mon tableau de bord</string>
</resources>