<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white">

    <!-- Top Navigation Bar -->
    <!-- Top Navigation Bar -->
    <RelativeLayout
        android:id="@+id/navView"
        android:layout_width="fill_parent"
        android:layout_height="44dip"
        android:layout_alignParentTop="true"
        android:background="@color/header_bg">

        <!-- Top Bar Title -->
        <TextView
            android:id="@+id/txt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/evaluation_title"
            android:textColor="@color/header_text_color"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnModify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:gravity="center_horizontal"
            android:text="X"
            android:textSize="18sp"
            android:layout_alignParentRight="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="18dp"
            android:textAllCaps="false"
            android:textColor="@color/header_text_color"
            android:paddingRight="10dp"
            android:onClick="dismissPage">
        </Button>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">
        <TextView
            android:id="@+id/tvEvalIntro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            style="@style/blackNormal.Large"
            android:text="@string/messages_low_rating_intro"/>
        <View
            android:id="@+id/separator"
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="10dp"
            android:background="@color/common_gray_separator" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/cbRatingConseils"
                android:button="@drawable/roundcheckbox_selector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/message_rating_conseils"
                android:paddingLeft="5dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/text_black"/>
            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:background="@color/common_gray_separator" />
            <CheckBox
                android:id="@+id/cbRatingTemps"
                android:button="@drawable/roundcheckbox_selector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/message_rating_temps"
                android:paddingLeft="5dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/text_black"/>
            <View

                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:background="@color/common_gray_separator" />
            <CheckBox
                android:id="@+id/cbRatingQualite"
                android:button="@drawable/roundcheckbox_selector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/message_rating_qualite"
                android:paddingLeft="5dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/text_black"/>
            <View

                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:background="@color/common_gray_separator" />
            <CheckBox
                android:id="@+id/cbRatingAutres"
                android:button="@drawable/roundcheckbox_selector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/message_rating_autres"
                android:paddingLeft="5dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/text_black"
                android:onClick="showReason"/>
            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:background="@color/common_gray_separator" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">
            <EditText
                android:id="@+id/etReason"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="4"
                android:layout_marginBottom="10dp"
               android:hint="@string/TEXT_OTHERS"
                android:gravity="start"
                android:maxLength="50"
                android:visibility="gone"/>
            <Button
                android:id="@+id/btnSubmitRatingReason"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/button_rounded"
                android:text="@string/BUTTON_SUBMIT"
                style="@style/btnStyleOrange"
                android:onClick="dismissPage"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>