<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/paymentoptions_rl"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/gray_bg_reg_code">

    <include
        android:id="@+id/reg_header"
        layout="@layout/reg_header"
        android:layout_width="fill_parent"
        android:layout_height="44dp"
        android:layout_alignParentTop="true" />


    <ImageView
        android:layout_width="115dp"
        android:layout_height="115dp"
        android:layout_below="@id/reg_header"
        android:id="@+id/welcome_coach_iv"
        android:layout_margin="20dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/greeting_jmc" />

    <TextView
        android:id="@+id/welcome_bravo_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcome_coach_iv"
        android:gravity="center"
        android:text="@string/WELCOME_BRAVO"
        android:textColor="@color/text_black"
        android:textSize="16.5sp"
        android:layout_margin="20dp"/>

    <TextView
        android:id="@+id/welcome_whatsnetxt_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcome_bravo_tv"
        android:gravity="center"
        android:text="@string/WELCOME_WHAT_HAPPENS_NEXT"
        android:textColor="@color/text_black"
        android:textSize="17sp"
        android:textStyle="bold"  />

    <TextView
        android:id="@+id/welcome_tohelpbetter_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcome_whatsnetxt_tv"
        android:gravity="center"
        android:text="@string/WELCOME_POST_PREMIUM_DESCRIPTION"
        android:textColor="@color/text_black"
        android:textSize="16.5sp"
        android:layout_margin="20dp"/>

    <LinearLayout
        android:id="@+id/welcome_submit_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="15dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <Button
            android:id="@+id/welcome_submitBtn"
            style="@style/btnStyleWhiteCode"
            android:layout_width="250dp"
            android:layout_height="35dp"
            android:layout_gravity="bottom|center_horizontal"
            android:clickable="true"
            android:onClick="proceedToNextStep"
            android:text="@string/WELCOME_LETS_MOVE_ON" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/welcome_progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

</RelativeLayout>